<resources>
    <string name="app_name">Mine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_stuff_save_description">Save thing</string>
    <string name="edit_stuff_description">Description</string>
    <string name="view_stuff_item_image_desc">Image of thing</string>
    <string name="edit_stuff_item_picture_label">Picture</string>
    <string name="edit_stuff_item_take_picture">Take a picture</string>
    <string name="edit_stuff_item_image_label">Picture</string>
    <string name="edit_stuff_item_image_content_desc">Picture</string>
    <string name="menu_edit_item_delete">Delete</string>
</resources>
